--- a/resume.tex
+++ b/resume.tex
@@ -1,7 +1,7 @@
 %-------------------------
 % Resume in Latex
-% Author : Audric Serador
-% Inspired by: https://github.com/sb2nov/resume
+% Author : Raj Sahu
+% Inspired by: https://github.com/rajsahu2004/resume
 % License : MIT
 %------------------------
 
